--- a/index.html
+++ b/index.html
@@ -1,183 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>🎉 Fun & Image API Explorer</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #111;
-      color: #fefefe;
-    }
-
-    .container {
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-      text-align: center;
-    }
-
-    h1 {
-      color: #00ffc8;
-      margin-bottom: 2rem;
-    }
-
-    h2 {
-      color: #ffcc00;
-      margin-top: 2rem;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li {
-      display: inline-block;
-      margin: 0.5rem;
-    }
-
-    button {
-      padding: 0.6rem 1rem;
-      background: #222;
-      border: 1px solid #444;
-      color: #fff;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #00ffc8;
-      color: #000;
-      font-weight: bold;
-    }
-
-    img {
-      width: 400px;
-      height: auto;
-      max-height: 400px;
-      object-fit: cover;
-      border-radius: 10px;
-      border: 2px solid #fff;
-      margin-top: 1rem;
-      box-shadow: 0 0 20px rgba(0,255,200,0.5);
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(15, 15, 15, 0.98);
-      z-index: 9999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-
-    .overlay-content {
-      text-align: center;
-      padding: 2rem;
-      border-radius: 12px;
-      max-width: 90%;
-      max-height: 90%;
-      overflow-y: auto;
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background: #ff4444;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .close-btn:hover {
-      background: #ff0000;
-    }
-
-    .hidden {
-      display: none;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>🧠 API Explorer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🎭 Welcome to the Fun & Image API Explorer 🚀</h1>
+    <h1>🌌 API Explorer Interface</h1>
 
-    <div id="categoryButtons">
-      <button onclick="showCategory('jest', 'image')">😂 Jest</button>
-      <button onclick="showCategory('nsfw', 'image')">🔞 NSFW</button>
-      <button onclick="showCategory('fun', 'text')">🎈 Fun</button>
+    <div id="mainMenu">
+      <button onclick="showCategory('jest')" style="display: block; width: 100%;">😂 Jest</button>
+<button onclick="showCategory('fun')" style="display: block; width: 100%;">🎉 Fun</button>
+<button onclick="showCategory('nsfw')" style="display: block; width: 100%;">🔞 NSFW</button>
     </div>
 
-    <div id="categoryContent" class="hidden">
+    <div id="categoryMenu" style="display:none;">
       <h2 id="categoryTitle"></h2>
-      <ul id="categoryList"></ul>
-      <button onclick="goBack()">🔙 Back</button>
+      <div id="endpoints"></div>
+      <button class="back-btn" onclick="goBack()">🔙 Back</button>
     </div>
-  </div>
 
-  <div id="resultOverlay" class="overlay hidden">
-    <div class="overlay-content">
-      <button class="close-btn" onclick="closeResult()">❌ Cancel</button>
-      <h3>📦 API Result</h3>
-      <div id="resultContent"></div>
-    </div>
+    <div id="resultContainer" style="display:none;"></div>
   </div>
 
   <script>
-    async function showCategory(category, type) {
-      document.getElementById('categoryButtons').classList.add('hidden');
-      document.getElementById('categoryContent').classList.remove('hidden');
-      document.getElementById('categoryTitle').innerText = `📂 ${category.toUpperCase()} Endpoints`;
+    async function showCategory(category) {
+      document.getElementById('mainMenu').style.display = 'none';
+      document.getElementById('categoryMenu').style.display = 'block';
+      document.getElementById('resultContainer').style.display = 'none';
+      document.getElementById('categoryTitle').innerText = `📁 ${category.toUpperCase()} Endpoints`;
 
       const res = await fetch(`/${category}`);
       const data = await res.json();
-      const list = document.getElementById('categoryList');
-      list.innerHTML = '';
 
+      const endpointsDiv = document.getElementById('endpoints');
+      endpointsDiv.innerHTML = '';
       data.categories.forEach(endpoint => {
-        const li = document.createElement('li');
-        li.innerHTML = `<button onclick="fetchResult('${category}/${endpoint}', '${type}')">📥 ${endpoint}</button>`;
-        list.appendChild(li);
+        const btn = document.createElement('button');
+        btn.textContent = `📥 ${endpoint}`;
+        btn.onclick = () => fetchAndShowResult(`${category}/${endpoint}`);
+        endpointsDiv.appendChild(btn);
       });
     }
 
     function goBack() {
-      document.getElementById('categoryButtons').classList.remove('hidden');
-      document.getElementById('categoryContent').classList.add('hidden');
-      document.getElementById('categoryList').innerHTML = '';
+      document.getElementById('mainMenu').style.display = 'block';
+      document.getElementById('categoryMenu').style.display = 'none';
+      document.getElementById('resultContainer').style.display = 'none';
     }
 
-    async function fetchResult(endpoint, type) {
+    async function fetchAndShowResult(endpoint) {
       const res = await fetch(`/${endpoint}`);
       const data = await res.json();
-      const result = document.getElementById("resultContent");
-      const overlay = document.getElementById("resultOverlay");
-      overlay.classList.remove("hidden");
 
-      if (type === 'image') {
-        result.innerHTML = `<img src="${data.imageUrl}" alt="Image from API">`;
-      } else {
-        result.innerHTML = `<p>🧠 ${data.content}</p>`;
-      }
-    }
-
-    function closeResult() {
-      document.getElementById("resultOverlay").classList.add("hidden");
-      document.getElementById("resultContent").innerHTML = "";
+      document.getElementById('categoryMenu').style.display = 'none';
+      const resultDiv = document.getElementById('resultContainer');
+      resultDiv.style.display = 'block';
+      resultDiv.innerText = JSON.stringify(data, null, 2); // 👈 JSON only
     }
   </script>
 </body>
