--- a/index.html
+++ b/index.html
@@ -5,6 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🧠 API Explorer</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* style.css */
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+  color: #fefefe;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 2rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+  background: linear-gradient(to right, #00c6ff, #ff5e62);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+section {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+button {
+  padding: 0.7rem 1.2rem;
+  margin: 0.5rem;
+  background: #1a1a2e;
+  border: 1px solid #9d4edd;
+  color: #fefefe;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 10px #9d4edd;
+}
+
+button:hover {
+  background: #9d4edd;
+  color: #fff;
+  font-weight: bold;
+  transform: scale(1.05);
+}
+
+.container {
+  max-width: 900px;
+  width: 100%;
+}
+
+#resultContainer {
+  margin-top: 2rem;
+  background-color: rgba(255, 255, 255, 0.05);
+  padding: 1rem;
+  border-radius: 10px;
+  color: #00fff7;
+  font-family: monospace;
+  white-space: pre-wrap;
+  word-break: break-word;
+  max-width: 100%;
+  overflow-wrap: break-word;
+}
+
+.back-btn {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #ff5e62;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  box-shadow: 0 0 8px #ff5e62;
+}
+
+.back-btn:hover {
+  background-color: #ff3b47;
+}
+  </style>
 </head>
 <body>
   <div class="container">
