--- a/index.html
+++ b/index.html
@@ -4,87 +4,72 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🧠 API Explorer</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
-    /* style.css */
-body {
-  margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-  color: #fefefe;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 2rem;
-}
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: #f9f9f9;
+    }
 
-h1 {
-  font-size: 2.5rem;
-  background: linear-gradient(to right, #00c6ff, #ff5e62);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 2rem;
-  text-align: center;
-}
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-section {
-  margin-top: 2rem;
-  text-align: center;
-}
+    h1, h2 {
+      text-align: center;
+    }
 
-button {
-  padding: 0.7rem 1.2rem;
-  margin: 0.5rem;
-  background: #1a1a2e;
-  border: 1px solid #9d4edd;
-  color: #fefefe;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 0 10px #9d4edd;
-}
+    button {
+      display: inline-block;
+      padding: 12px 20px;
+      font-size: 16px;
+      margin: 10px 5px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      background-color: #007BFF;
+      color: white;
+      transition: background-color 0.2s ease;
+    }
 
-button:hover {
-  background: #9d4edd;
-  color: #fff;
-  font-weight: bold;
-  transform: scale(1.05);
-}
+    button:hover {
+      background-color: #0056b3;
+    }
 
-.container {
-  max-width: 900px;
-  width: 100%;
-}
+    #endpoints button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      text-align: left;
+      background-color: #17a2b8;
+    }
 
-#resultContainer {
-  margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.05);
-  padding: 1rem;
-  border-radius: 10px;
-  color: #00fff7;
-  font-family: monospace;
-  white-space: pre-wrap;
-  word-break: break-word;
-  max-width: 100%;
-  overflow-wrap: break-word;
-}
+    #endpoints button:hover {
+      background-color: #117a8b;
+    }
 
-.back-btn {
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  background-color: #ff5e62;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  box-shadow: 0 0 8px #ff5e62;
-}
+    .back-btn {
+      background-color: #6c757d;
+    }
 
-.back-btn:hover {
-  background-color: #ff3b47;
-}
+    .back-btn:hover {
+      background-color: #5a6268;
+    }
+
+    #resultContainer {
+      white-space: pre-wrap;
+      background-color: #f1f1f1;
+      padding: 15px;
+      border-radius: 8px;
+      margin-top: 20px;
+      font-family: monospace;
+    }
   </style>
 </head>
 <body>
@@ -92,9 +77,9 @@ button:hover {
     <h1>🌌 API Explorer Interface</h1>
 
     <div id="mainMenu">
-      <button onclick="showCategory('jest')" style="display: block; width: 100%;">😂 Jest</button>
-<button onclick="showCategory('fun')" style="display: block; width: 100%;">🎉 Fun</button>
-<button onclick="showCategory('nsfw')" style="display: block; width: 100%;">🔞 NSFW</button>
+      <button onclick="showCategory('jest')">😂 Jest</button>
+      <button onclick="showCategory('fun')">🎉 Fun</button>
+      <button onclick="showCategory('nsfw')">🔞 NSFW</button>
     </div>
 
     <div id="categoryMenu" style="display:none;">
@@ -139,7 +124,7 @@ button:hover {
       document.getElementById('categoryMenu').style.display = 'none';
       const resultDiv = document.getElementById('resultContainer');
       resultDiv.style.display = 'block';
-      resultDiv.innerText = JSON.stringify(data, null, 2); // 👈 JSON only
+      resultDiv.innerText = JSON.stringify(data, null, 2);
     }
   </script>
 </body>
