--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <h1>🌌 API Explorer Interface</h1>
 
     <div id="mainMenu">
-      <button onclick="showCategory('jest')">😂 Jest</button>
-      <button onclick="showCategory('fun')">🎉 Fun</button>
-      <button onclick="showCategory('nsfw')">🔞 NSFW</button>
+      <button onclick="showCategory('jest')" style="display: block; width: 100%;">😂 Jest</button>
+<button onclick="showCategory('fun')" style="display: block; width: 100%;">🎉 Fun</button>
+<button onclick="showCategory('nsfw')" style="display: block; width: 100%;">🔞 NSFW</button>
     </div>
 
     <div id="categoryMenu" style="display:none;">
