--- a/index.html
+++ b/index.html
@@ -1,95 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🌌 API Explorer Interface</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0; padding: 20px;
-      background: linear-gradient(135deg, #3b82f6, #ec4899, #8b5cf6, #f43f5e);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
-      color: #fff;
-      min-height: 100vh;
-      display: flex; justify-content: center; align-items: flex-start;
-    }
-    @keyframes gradientBG {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-    .container {
-      max-width: 650px;
-      width: 100%;
-      background: rgba(0,0,0,0.65);
-      padding: 25px 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.15);
-    }
-    h1, h2 {
-      text-align: center;
-      font-weight: 700;
-      margin-bottom: 20px;
-      letter-spacing: 1.5px;
-    }
-    button {
-      display: block;
-      width: 100%;
-      background: #8b5cf6;
-      color: white;
-      font-size: 16px;
-      padding: 14px 20px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      margin-bottom: 15px;
-      text-align: left;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      box-shadow: 0 3px 8px rgba(139,92,246,0.6);
-      font-weight: 600;
-    }
-    button:hover {
-      background: #ec4899;
-      transform: translateX(8px);
-      box-shadow: 0 5px 12px rgba(236,72,153,0.8);
-    }
-    .back-btn {
-      background: #3b82f6;
-      margin-top: 15px;
-      text-align: center;
-      font-weight: 700;
-      box-shadow: 0 3px 8px rgba(59,130,246,0.6);
-    }
-    .back-btn:hover {
-      background: #2563eb;
-      box-shadow: 0 5px 12px rgba(37,99,235,0.8);
-      transform: translateX(0);
-    }
-    #resultContainer {
-      white-space: pre-wrap;
-      background-color: rgba(255,255,255,0.12);
-      padding: 18px 20px;
-      border-radius: 12px;
-      margin-top: 20px;
-      font-family: 'Courier New', Courier, monospace;
-      max-height: 350px;
-      overflow-y: auto;
-      box-shadow: 0 0 15px rgba(255,255,255,0.2);
-    }
-    .endpoint-info {
-      font-size: 14px;
-      color: #d8b4fe;
-      margin-top: 15px;
-      font-family: monospace;
-      user-select: all;
-    }
-    .endpoint-info a {
-      color: #a78bfa;
-      text-decoration: underline;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>🌌 API Explorer Interface</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0; padding: 20px;
+    background: linear-gradient(135deg, #3b82f6, #ec4899, #8b5cf6, #f43f5e);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
+    color: #fff;
+    min-height: 100vh;
+    display: flex; justify-content: center; align-items: flex-start;
+  }
+  @keyframes gradientBG {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+  }
+  .container {
+    max-width: 650px;
+    width: 100%;
+    background: rgba(0,0,0,0.65);
+    padding: 25px 30px;
+    border-radius: 16px;
+    box-shadow: 0 0 20px rgba(255,255,255,0.15);
+  }
+  h1, h2 {
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 20px;
+    letter-spacing: 1.5px;
+  }
+  button {
+    display: block;
+    width: 100%;
+    background: #8b5cf6;
+    color: white;
+    font-size: 16px;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-bottom: 15px;
+    text-align: left;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 3px 8px rgba(139,92,246,0.6);
+    font-weight: 600;
+  }
+  button:hover {
+    background: #ec4899;
+    transform: translateX(8px);
+    box-shadow: 0 5px 12px rgba(236,72,153,0.8);
+  }
+  .back-btn {
+    background: #3b82f6;
+    margin-top: 15px;
+    text-align: center;
+    font-weight: 700;
+    box-shadow: 0 3px 8px rgba(59,130,246,0.6);
+  }
+  .back-btn:hover {
+    background: #2563eb;
+    box-shadow: 0 5px 12px rgba(37,99,235,0.8);
+    transform: translateX(0);
+  }
+  #resultContainer {
+    white-space: pre-wrap;
+    background-color: rgba(255,255,255,0.12);
+    padding: 18px 20px;
+    border-radius: 12px;
+    margin-top: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    max-height: 350px;
+    overflow-y: auto;
+    box-shadow: 0 0 15px rgba(255,255,255,0.2);
+  }
+  .endpoint-info {
+    font-size: 14px;
+    color: #d8b4fe;
+    margin-top: 15px;
+    font-family: monospace;
+    user-select: all;
+  }
+  .endpoint-info a {
+    color: #a78bfa;
+    text-decoration: underline;
+  }
+  #resultImage {
+    max-width: 100%;
+    border-radius: 12px;
+    margin-top: 15px;
+    box-shadow: 0 0 15px rgba(255,255,255,0.3);
+    display: none;
+  }
+</style>
 </head>
 <body>
   <div class="container">
@@ -112,92 +119,108 @@
     <!-- Result View -->
     <div id="resultView" style="display:none;">
       <h2 id="resultTitle"></h2>
-      <div id="resultContainer"></div>
+      <pre id="resultContainer"></pre>
+      <img id="resultImage" alt="API Image Result" />
       <div class="endpoint-info" id="endpointInfo"></div>
       <button class="back-btn" onclick="backToCategory()">🔙 Back to Endpoints</button>
     </div>
   </div>
 
-  <script>
-    let currentCategory = '';
-    let currentEndpoint = '';
+<script>
+  let currentCategory = '';
+  let currentEndpoint = '';
 
-    async function showCategory(category) {
-      currentCategory = category;
-      currentEndpoint = '';
-      document.getElementById('mainMenu').style.display = 'none';
-      document.getElementById('resultView').style.display = 'none';
-      document.getElementById('categoryMenu').style.display = 'block';
-      document.getElementById('categoryTitle').innerText = `📁 ${category.toUpperCase()} Endpoints`;
+  function isImageUrl(url) {
+    return /\.(jpeg|jpg|gif|png|webp|svg|bmp|tiff?)$/i.test(url);
+  }
 
-      try {
-        const res = await fetch(`/${category}`);
-        if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
-        const data = await res.json();
+  async function showCategory(category) {
+    currentCategory = category;
+    currentEndpoint = '';
+    document.getElementById('mainMenu').style.display = 'none';
+    document.getElementById('resultView').style.display = 'none';
+    document.getElementById('categoryMenu').style.display = 'block';
+    document.getElementById('categoryTitle').innerText = `📁 ${category.toUpperCase()} Endpoints`;
 
-        const endpointsDiv = document.getElementById('endpoints');
-        endpointsDiv.innerHTML = '';
+    try {
+      const res = await fetch(`/${category}`);
+      if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
+      const data = await res.json();
 
-        data.categories.forEach(endpoint => {
-          const btn = document.createElement('button');
-          btn.textContent = `📥 ${endpoint}`;
-          btn.onclick = () => fetchAndShowResult(`${category}/${endpoint}`, category, endpoint);
-          endpointsDiv.appendChild(btn);
-        });
+      const endpointsDiv = document.getElementById('endpoints');
+      endpointsDiv.innerHTML = '';
 
-      } catch (err) {
-        alert("Failed to load category endpoints: " + err.message);
-      }
+      data.categories.forEach(endpoint => {
+        const btn = document.createElement('button');
+        btn.textContent = `📥 ${endpoint}`;
+        btn.onclick = () => fetchAndShowResult(`${category}/${endpoint}`, category, endpoint);
+        endpointsDiv.appendChild(btn);
+      });
+    } catch (err) {
+      alert("Failed to load category endpoints: " + err.message);
     }
+  }
 
-    async function fetchAndShowResult(endpointPath, category, endpoint) {
-      currentCategory = category;
-      currentEndpoint = endpoint;
+  async function fetchAndShowResult(endpointPath, category, endpoint) {
+    currentCategory = category;
+    currentEndpoint = endpoint;
 
-      try {
-        const res = await fetch(`/${endpointPath}`);
-        if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
-        const data = await res.json();
+    try {
+      const res = await fetch(`/${endpointPath}`);
+      if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
+      const data = await res.json();
 
-        document.getElementById('categoryMenu').style.display = 'none';
-        document.getElementById('mainMenu').style.display = 'none';
-
-        // Show result view
-        document.getElementById('resultView').style.display = 'block';
-        document.getElementById('resultTitle').innerText = `🧾 Result for /${category}/${endpoint}`;
-
-        // Show pretty JSON result
-        document.getElementById('resultContainer').innerText = JSON.stringify(data, null, 2);
-
-        // Show example GET and direct link
-        const url = `${window.location.origin}/${category}/${endpoint}`;
-        document.getElementById('endpointInfo').innerHTML = `
-          Example GET: <code>curl ${url}</code><br/>
-          Direct link: <a href="${url}" target="_blank" rel="noopener">${url}</a>
-        `;
-
-      } catch (err) {
-        alert("Failed to load endpoint result: " + err.message);
-      }
-    }
-
-    function backToMain() {
-      currentCategory = '';
-      currentEndpoint = '';
-      document.getElementById('mainMenu').style.display = 'block';
       document.getElementById('categoryMenu').style.display = 'none';
-      document.getElementById('resultView').style.display = 'none';
-    }
+      document.getElementById('mainMenu').style.display = 'none';
 
-    function backToCategory() {
-      if (currentCategory) {
-        document.getElementById('mainMenu').style.display = 'none';
-        document.getElementById('categoryMenu').style.display = 'block';
-        document.getElementById('resultView').style.display = 'none';
+      document.getElementById('resultView').style.display = 'block';
+      document.getElementById('resultTitle').innerText = `🧾 Result for /${category}/${endpoint}`;
+
+      const resultContainer = document.getElementById('resultContainer');
+      const resultImage = document.getElementById('resultImage');
+
+      if (data.imageUrl && isImageUrl(data.imageUrl)) {
+        // Show image
+        resultImage.src = data.imageUrl;
+        resultImage.style.display = 'block';
+        // Also show JSON below image for transparency
+        resultContainer.style.display = 'block';
+        resultContainer.textContent = JSON.stringify(data, null, 2);
       } else {
-        backToMain();
+        // Hide image and show JSON only
+        resultImage.style.display = 'none';
+        resultContainer.style.display = 'block';
+        resultContainer.textContent = JSON.stringify(data, null, 2);
       }
+
+      const url = `${window.location.origin}/${category}/${endpoint}`;
+      document.getElementById('endpointInfo').innerHTML = `
+        Example GET: <code>curl ${url}</code><br/>
+        Direct link: <a href="${url}" target="_blank" rel="noopener">${url}</a>
+      `;
+    } catch (err) {
+      alert("Failed to load endpoint result: " + err.message);
     }
-  </script>
+  }
+
+  function backToMain() {
+    currentCategory = '';
+    currentEndpoint = '';
+    document.getElementById('mainMenu').style.display = 'block';
+    document.getElementById('categoryMenu').style.display = 'none';
+    document.getElementById('resultView').style.display = 'none';
+  }
+
+  function backToCategory() {
+    if (currentCategory) {
+      document.getElementById('mainMenu').style.display = 'none';
+      document.getElementById('categoryMenu').style.display = 'block';
+      document.getElementById('resultView').style.display = 'none';
+    } else {
+      backToMain();
+    }
+  }
+
+</script>
 </body>
 </html>
