--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+divide this single file  into 3 HTMLs
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>🌌 API Explorer Interface - Main Menu</title>
+<title>🌌 API Explorer Interface</title>
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -28,7 +30,7 @@
     border-radius: 16px;
     box-shadow: 0 0 20px rgba(255,255,255,0.15);
   }
-  h1 {
+  h1, h2 {
     text-align: center;
     font-weight: 700;
     margin-bottom: 20px;
@@ -55,22 +57,172 @@
     transform: translateX(8px);
     box-shadow: 0 5px 12px rgba(236,72,153,0.8);
   }
+  .back-btn {
+    background: #3b82f6;
+    margin-top: 15px;
+    text-align: center;
+    font-weight: 700;
+    box-shadow: 0 3px 8px rgba(59,130,246,0.6);
+  }
+  .back-btn:hover {
+    background: #2563eb;
+    box-shadow: 0 5px 12px rgba(37,99,235,0.8);
+    transform: translateX(0);
+  }
+  #resultContainer {
+    white-space: pre-wrap;
+    background-color: rgba(255,255,255,0.12);
+    padding: 18px 20px;
+    border-radius: 12px;
+    margin-top: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    max-height: 350px;
+    overflow-y: auto;
+    box-shadow: 0 0 15px rgba(255,255,255,0.2);
+  }
+  .endpoint-info {
+    font-size: 14px;
+    color: #d8b4fe;
+    margin-top: 15px;
+    font-family: monospace;
+    user-select: all;
+  }
+  .endpoint-info a {
+    color: #a78bfa;
+    text-decoration: underline;
+  }
+  #resultImage {
+    max-width: 100%;
+    border-radius: 12px;
+    margin-top: 15px;
+    box-shadow: 0 0 15px rgba(255,255,255,0.3);
+    display: none;
+  }
 </style>
 </head>
 <body>
   <div class="container">
     <h1>🌌 API Explorer Interface</h1>
+
     <!-- Main Menu -->
-    <button onclick="goToCategory('jest')">😂 Jest</button>
-    <button onclick="goToCategory('fun')">🎉 Fun</button>
-    <button onclick="goToCategory('nsfw')">🔞 NSFW</button>
+    <div id="mainMenu">
+      <button onclick="showCategory('jest')">😂 Jest</button>
+      <button onclick="showCategory('fun')">🎉 Fun</button>
+      <button onclick="showCategory('nsfw')">🔞 NSFW</button>
+    </div>
+
+    <!-- Category Menu -->
+    <div id="categoryMenu" style="display:none;">
+      <h2 id="categoryTitle"></h2>
+      <div id="endpoints"></div>
+      <button class="back-btn" onclick="backToMain()">🔙 Back to Categories</button>
+    </div>
+
+    <!-- Result View -->
+    <div id="resultView" style="display:none;">
+      <h2 id="resultTitle"></h2>
+      <pre id="resultContainer"></pre>
+      <img id="resultImage" alt="API Image Result" />
+      <div class="endpoint-info" id="endpointInfo"></div>
+      <button class="back-btn" onclick="backToCategory()">🔙 Back to Endpoints</button>
+    </div>
   </div>
 
 <script>
-  function goToCategory(category) {
-    // Navigate to category page with category as URL param
-    window.location.href = `category.html?category=${encodeURIComponent(category)}`;
+  let currentCategory = '';
+  let currentEndpoint = '';
+
+  function isImageUrl(url) {
+    return /\.(jpeg|jpg|gif|png|webp|svg|bmp|tiff?)$/i.test(url);
   }
+
+  async function showCategory(category) {
+    currentCategory = category;
+    currentEndpoint = '';
+    document.getElementById('mainMenu').style.display = 'none';
+    document.getElementById('resultView').style.display = 'none';
+    document.getElementById('categoryMenu').style.display = 'block';
+    document.getElementById('categoryTitle').innerText = `📁 ${category.toUpperCase()} Endpoints`;
+
+    try {
+      const res = await fetch(`/${category}`);
+      if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
+      const data = await res.json();
+
+      const endpointsDiv = document.getElementById('endpoints');
+      endpointsDiv.innerHTML = '';
+
+      data.categories.forEach(endpoint => {
+        const btn = document.createElement('button');
+        btn.textContent = `📥 ${endpoint}`;
+        btn.onclick = () => fetchAndShowResult(`${category}/${endpoint}`, category, endpoint);
+        endpointsDiv.appendChild(btn);
+      });
+    } catch (err) {
+      alert("Failed to load category endpoints: " + err.message);
+    }
+  }
+
+  async function fetchAndShowResult(endpointPath, category, endpoint) {
+    currentCategory = category;
+    currentEndpoint = endpoint;
+
+    try {
+      const res = await fetch(`/${endpointPath}`);
+      if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
+      const data = await res.json();
+
+      document.getElementById('categoryMenu').style.display = 'none';
+      document.getElementById('mainMenu').style.display = 'none';
+
+      document.getElementById('resultView').style.display = 'block';
+      document.getElementById('resultTitle').innerText = `🧾 Result for /${category}/${endpoint}`;
+
+      const resultContainer = document.getElementById('resultContainer');
+      const resultImage = document.getElementById('resultImage');
+
+      if (data.imageUrl && isImageUrl(data.imageUrl)) {
+        // Show image
+        resultImage.src = data.imageUrl;
+        resultImage.style.display = 'block';
+        // Also show JSON below image for transparency
+        resultContainer.style.display = 'block';
+        resultContainer.textContent = JSON.stringify(data, null, 2);
+      } else {
+        // Hide image and show JSON only
+        resultImage.style.display = 'none';
+        resultContainer.style.display = 'block';
+        resultContainer.textContent = JSON.stringify(data, null, 2);
+      }
+
+      const url = `${window.location.origin}/${category}/${endpoint}`;
+      document.getElementById('endpointInfo').innerHTML = `
+        Example GET: <code>curl ${url}</code><br/>
+        Direct link: <a href="${url}" target="_blank" rel="noopener">${url}</a>
+      `;
+    } catch (err) {
+      alert("Failed to load endpoint result: " + err.message);
+    }
+  }
+
+  function backToMain() {
+    currentCategory = '';
+    currentEndpoint = '';
+    document.getElementById('mainMenu').style.display = 'block';
+    document.getElementById('categoryMenu').style.display = 'none';
+    document.getElementById('resultView').style.display = 'none';
+  }
+
+  function backToCategory() {
+    if (currentCategory) {
+      document.getElementById('mainMenu').style.display = 'none';
+      document.getElementById('categoryMenu').style.display = 'block';
+      document.getElementById('resultView').style.display = 'none';
+    } else {
+      backToMain();
+    }
+  }
+
 </script>
 </body>
 </html>
